--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -7,7 +7,7 @@
 
 	<title>{{title}}</title>
 
-	{{#if fabricator}}<link rel="stylesheet" href="{{baseurl}}/assets/fabricator/styles/f.css">{{/if}}
+	{{#if fabricator}}<link rel="stylesheet" href="assets/fabricator/styles/f.css">{{/if}}
 
 	<!-- Latin font-->
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900">
@@ -16,9 +16,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Amiri:400,400italic,700,700italic&subset=arabic,latin' rel='stylesheet' type='text/css'>
 
 	<!-- toolkit styles -->
-	<link rel="stylesheet" href="{{baseurl}}/assets/toolkit/styles/toolkit.css">
+	<link rel="stylesheet" href="assets/toolkit/styles/toolkit.css">
 	<!-- /toolkit styles -->
- 
+
 </head>
 <body>
 
@@ -35,11 +35,11 @@
 
 	{{#if fabricator}}
 		</div>
-	<script src="{{baseurl}}/assets/fabricator/scripts/f.js"></script>
+	<script src="assets/fabricator/scripts/f.js"></script>
 	{{/if}}
 
 	<!-- toolkit scripts -->
-	<script src="{{baseurl}}/assets/toolkit/scripts/toolkit.js"></script>
+	<script src="assets/toolkit/scripts/toolkit.js"></script>
 	<!-- /toolkit scripts -->
 
 </body>
