Beginning to add custom styles

--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -1,8 +1,19 @@
+$brand-primary: #219633;
+$font-family-sans-serif: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$dropdown-link-hover-color: #FFF;
+$dropdown-link-hover-bg: $brand-primary;
+$border-radius-base: 0px;
+$border-radius-large: 0px;
+$border-radius-small: 0px;
+
 // Import vendor styles
 @import "vendor/_bootstrap.scss", "vendor/font-awesome.scss"; // Toolkit
+
+
 
 body {
 	font-size  : 16px;
 	line-height: 1.5;
-	font-family: 'Roboto';
 }
+
+.btn-primary { font-weight: bold; }
