--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,6 +3,8 @@ title: Overview | Fabricator
 fabricator: true
 ---
 
+<img src="http://apps4clubz.com/wp-content/uploads/2017/01/lockup_trans_dark.png" alt="Apps4Clubz Logo" style="max-width: 30em;">
+
 <h1>Overview</h1>
 
 <p>This UI toolkit is a highly-modular design system for rapid web page development. It contains different materials that can be assembled into more complex page layouts.</p>
