--- a/src/assets/fabricator/styles/partials/_item.scss
+++ b/src/assets/fabricator/styles/partials/_item.scss
@@ -3,7 +3,7 @@
 	margin-top: 3rem;
 	margin-bottom: 3rem;
 	padding-bottom: 3rem;
-	border-bottom: 1px solid map-get($colors, light);
+	// border-bottom: 1px solid map-get($colors, light);
 
 	&:last-child {
 		border-bottom: 0;
@@ -44,8 +44,9 @@
 		content: 'EXAMPLE';
 		margin-bottom: 1rem;
 		font-weight: bold;
-		color: #CCC;
-		letter-spacing: 0.125em;
+		color: #999;
+		font-size: 0.8em;
+		letter-spacing: 0.05em;
 	}
 }
 
