--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -1,16 +1,37 @@
+// Import fonts from Google CDN
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:400,400i,700,700i');
+
+
+// Overwrite Bootstrap defaults
 $brand-primary: #219633;
 $font-family-sans-serif: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
-$dropdown-link-hover-color: #FFF;
-$dropdown-link-hover-bg: $brand-primary;
+$font-family-serif: 'Roboto Slab', Georgia, "Times New Roman", Times, serif;
+
+$headings-font-family: $font-family-serif;
+$headings-font-weight: 400;
+
 $border-radius-base: 0px;
 $border-radius-large: 0px;
 $border-radius-small: 0px;
 
+$dropdown-link-hover-color: #FFF;
+$dropdown-link-hover-bg: $brand-primary;
+
+$navbar-inverse-bg: $brand-primary;
+$navbar-inverse-color: #FFF;
+$navbar-inverse-link-color: #FFF;
+$navbar-inverse-link-hover-bg: darken($navbar-inverse-bg, 10%);
+$navbar-inverse-link-hover-color: #FFF;
+$navbar-inverse-link-disabled-color: darken($navbar-inverse-bg, 10%);
+$navbar-inverse-toggle-hover-bg: darken($navbar-inverse-bg, 10%);
+$navbar-inverse-toggle-border-color: darken($navbar-inverse-bg, 10%);
+
+$hr-border: #CCC;
+
 // Import vendor styles
 @import "vendor/_bootstrap.scss", "vendor/font-awesome.scss"; // Toolkit
 
-
-
+// Custom styles
 body {
 	font-size  : 16px;
 	line-height: 1.5;
