--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -4,6 +4,11 @@
 
 // Overwrite Bootstrap defaults
 $brand-primary: #219633;
+$brand-success: #31D843;
+$brand-info: #3DD6D0;
+$brand-warning: #F9A03F;
+$brand-danger: #D66853;
+
 $font-family-sans-serif: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif: 'Roboto Slab', Georgia, "Times New Roman", Times, serif;
 
