Upgrade Bootstrap Sass, only use components we're restyling

--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -9,6 +9,8 @@
 
 	{{#if fabricator}}<link rel="stylesheet" href="assets/fabricator/styles/f.css">{{/if}}
 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 	<!-- toolkit styles -->
 	<link rel="stylesheet" href="assets/toolkit/styles/toolkit.css">
 	<!-- /toolkit styles -->
