--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -34,7 +34,7 @@ $navbar-inverse-toggle-border-color: darken($navbar-inverse-bg, 10%);
 $hr-border: #CCC;
 
 // Import vendor styles
-@import "vendor/_bootstrap.scss", "vendor/font-awesome.scss"; // Toolkit
+@import "vendor/_bootstrap.scss";
 
 // Custom styles
 body {
