--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -10,6 +10,10 @@
 	{{#if fabricator}}<link rel="stylesheet" href="assets/fabricator/styles/f.css">{{/if}}
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
 
 	<!-- toolkit styles -->
 	<link rel="stylesheet" href="assets/toolkit/styles/toolkit.css">
