Adds the rest of vertical navbars

--- a/src/materials/components/vertical_navbars/04-inverse-branded-vertical-navbar.html
+++ b/src/materials/components/vertical_navbars/04-inverse-branded-vertical-navbar.html
@@ -1,16 +1,9 @@
 ---
 notes: |
-  Vertical navbars are useful for creating sidebars with the same pattern and functionality of horizontal, page-header navbars.
-
-  Vertical navbars will expand to 100% width, so make sure they are contained within a column (`.col-sm-4` in this example) next to a main content column to give the appearance of a sidebar.
-
-  Vertical navbars will also collapse to a responsive, expanding menu on mobile devices and small screens (&lt;768px).
-
-  Vertical navbars also accept the same `.navbar-inverse`, `.navbar-branded`, and `.navbar-branded-inverse` classes and `data-brand` attributes as horizontal ones.
 ---
 
 <div class="col-sm-4">
-  <nav class="navbar navbar-default navbar-vertical">
+  <nav class="navbar navbar-default navbar-vertical navbar-branded-inverse" data-brand="#4099FF">
     <div class="container-fluid">
       <div class="navbar-header">
   			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
