--- a/src/materials/components/vertical_navbars/04-inverse-branded-vertical-navbar.html
+++ b/src/materials/components/vertical_navbars/04-inverse-branded-vertical-navbar.html
@@ -15,7 +15,12 @@ notes: |
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li class="section-header">Section Header</li>
           <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link</a></li>
+          <li><hr></li>
+          <li class="section-header">Section Header</li>
+          <li><a href="#">Link</a></li>
           <li><a href="#">Link</a></li>
           <li><hr></li>
           <li class="dropdown">
