Cards looking better!

--- a/src/views/cards-example.html
+++ b/src/views/cards-example.html
@@ -19,7 +19,6 @@ fabricator: false
 	        </a>
 	        <ul class="dropdown-menu dropdown-menu-right">
 	          <li><a href="#">Edit</a></li>
-	          <li><a href="#">Copy</a></li>
 	          <li><a href="#">Delete</a></li>
 						<li><a href="#">Send Reminder</a></li>
 	        </ul>
@@ -77,7 +76,6 @@ fabricator: false
 	  <div class="card-footer">
 	    <div class="card-footer-actions">
 				<button class="btn btn-default">Edit</button>
-	      <button class="btn btn-default">Copy</button>
 	      <button class="btn btn-default">Delete</button>
 	      <button class="btn btn-default">Send Reminder</button>
 	    </div>
@@ -96,26 +94,17 @@ fabricator: false
 	        </a>
 	        <ul class="dropdown-menu dropdown-menu-right">
 	          <li><a href="#">Edit</a></li>
-	          <li><a href="#">Copy</a></li>
 	          <li><a href="#">Delete</a></li>
-						<li><a href="#">Send Reminder</a></li>
 	        </ul>
 	      </div>
 	    </div>
 	  </div>
 	  <div class="card-content">
-			<div class="data-grid">
-				<dl>
-					<dt>Body</dt>
-					<dd>
-						<p><strong>Appetizer:</strong><br>Caramelized Onion, Chorizo, and White Bean Dip $11<br>Served chilled with grilled baguette</p>
-						<p><strong>Petite Entree:</strong><br>Seared Skate Fillet $19<br>Broccolini, balsamic roasted peppers and fresh lemon</p>
-						<p><strong>Entree</strong><br>Honey Glazed Boneless Pork Chop $23<br>Grilled and glazed pork chop, potato and corn hash, broccolini, and balsamic roasted peppers</p>
-						<p><strong>Seared Sea Scallops $31</strong><br>Marinated soba noodles, edamame cucumber salad, soy sauce, wasabi, and sriracha<br></p>
-						<p><strong>Chef's Daily Steak Feature:</strong><br>Grilled Tomahawk Steak $85<br>4oz Tomahawk steak served with choice of soup or salad, and two a la carte sides</p>
-					</dd>
-				</dl>
-			</div>
+			<p><strong>Appetizer:</strong><br>Caramelized Onion, Chorizo, and White Bean Dip $11<br>Served chilled with grilled baguette</p>
+			<p><strong>Petite Entree:</strong><br>Seared Skate Fillet $19<br>Broccolini, balsamic roasted peppers and fresh lemon</p>
+			<p><strong>Entree</strong><br>Honey Glazed Boneless Pork Chop $23<br>Grilled and glazed pork chop, potato and corn hash, broccolini, and balsamic roasted peppers</p>
+			<p><strong>Seared Sea Scallops $31</strong><br>Marinated soba noodles, edamame cucumber salad, soy sauce, wasabi, and sriracha<br></p>
+			<p><strong>Chef's Daily Steak Feature:</strong><br>Grilled Tomahawk Steak $85<br>4oz Tomahawk steak served with choice of soup or salad, and two a la carte sides</p>
 			<div class="data-grid grid-xs-1 grid-sm-2 grid-md-3 grid-lg-4">
 			  <dl>
 			  	<dt>Display Date</dt>
@@ -138,8 +127,65 @@ fabricator: false
 	  <div class="card-footer">
 	    <div class="card-footer-actions">
 				<button class="btn btn-default">Edit</button>
-	      <button class="btn btn-default">Copy</button>
 	      <button class="btn btn-default">Delete</button>
+	    </div>
+	  </div>
+	</div>
+
+
+	<h2>Events</h2>
+	<hr>
+	<div class="card">
+	  <div class="card-header">
+	    <div class="card-title">Set for Christmas, 2017</div>
+	    <div class="card-header-actions">
+        <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">RSVPs: 7</button>
+				<div class="btn-group">
+	        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          <i class="glyphicon glyphicon glyphicon-option-vertical"></i></span>
+	        </a>
+	        <ul class="dropdown-menu dropdown-menu-right">
+	          <li><a href="#">Edit</a></li>
+	          <li><a href="#">Delete</a></li>
+						<li><a href="#">Send Reminder</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="card-content">
+				<p>Description for event. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta expedita alias obcaecati totam distinctio laboriosam, ut culpa quia aperiam aspernatur dolores quod iusto delectus natus tempora in, nulla, quisquam eveniet.</p>
+			<div class="data-grid grid-xs-1 grid-sm-2 grid-md-3 grid-lg-3">
+				<dl>
+					<dt>Location</dt>
+					<dd>Staley Compound<br>101 Fan Court<br>Sewickley, Pennsylvania 15143</dd>
+				</dl>
+				<dl>
+					<dt>Start</dt>
+					<dd>Mon, Dec 25 6:00 PM</dd>
+				</dl>
+				<dl>
+					<dt>End</dt>
+					<dd>Mon, Dec 25 11:00 PM</dd>
+				</dl>
+				<dl>
+					<dt>RSVP By</dt>
+					<dd>Mon, Dec 25 6:00 PM</dd>
+				</dl>
+				<dl>
+					<dt>Display</dt>
+					<dd>Friday, December 01</dd>
+				</dl>
+				<dl>
+					<dt>Views</dt>
+					<dd>6 </dd>
+				</dl>
+			</div>
+	  </div>
+	  <div class="card-footer">
+	    <div class="card-footer-actions">
+				<button class="btn btn-default">Edit</button>
+	      <button class="btn btn-default">Delete</button>
+				<button class="btn btn-default">Send Reminder</button>
 	    </div>
 	  </div>
 	</div>
