--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -82,9 +82,9 @@ body {
 				padding-left  : 7px;
 				padding-bottom: 7px;
 				text-transform: uppercase;
-				letter-spacing: .025em;
-				opacity       : .8;
-				font-size     : .8em;
+				letter-spacing: 0.025em;
+				opacity       : 0.8;
+				font-size     : 0.8em;
 			}
 		}
 
@@ -111,6 +111,16 @@ body {
 	// Basic card
 	@extend .panel;
 	@extend .panel-default;
+
+	&:hover {
+		border-color: #CCC;
+		@include box-shadow(0 2px 2px rgba(0,0,0,.09));
+
+		.card-footer,
+		.card-header {
+			border-color: #CCC;
+		}
+	}
 
 	.card-header {
 		@extend .panel-heading;
@@ -143,42 +153,72 @@ body {
 		opacity: 0.5;
 	}
 
+	&.card-danger,
+	&.card-info,
 	&.card-primary,
 	&.card-success,
-	&.card-info,
-	&.card-warning,
-	&.card-danger {
+	&.card-warning {
 		border-left-width: 10px;
 	}
 
 	&.card-primary {
 		border-left-color: $brand-primary;
-		.card-header { background: lighten($brand-primary, 55%); }
-		.card-title { color: $brand-primary; }
+
+		.card-header {
+			background: lighten($brand-primary, 55%);
+		}
+
+		.card-title {
+			color: $brand-primary;
+		}
 	}
 
 	&.card-success {
 		border-left-color: $brand-success;
-		.card-header { background: lighten($brand-success, 45%); }
-		.card-title { color: $brand-success; }
+
+		.card-header {
+			background: lighten($brand-success, 45%);
+		}
+
+		.card-title {
+			color: $brand-success;
+		}
 	}
 
 	&.card-info {
 		border-left-color: $brand-info;
-		.card-header { background: lighten($brand-info, 35%); }
-		.card-title { color: $brand-info; }
+
+		.card-header {
+			background: lighten($brand-info, 35%);
+		}
+
+		.card-title {
+			color: $brand-info;
+		}
 	}
 
 	&.card-warning {
 		border-left-color: $brand-warning;
-		.card-header { background: lighten($brand-warning, 35%); }
-		.card-title { color: $brand-warning; }
+
+		.card-header {
+			background: lighten($brand-warning, 35%);
+		}
+
+		.card-title {
+			color: $brand-warning;
+		}
 	}
 
 	&.card-danger {
 		border-left-color: $brand-danger;
-		.card-header { background: lighten($brand-danger, 35%); }
-		.card-title { color: $brand-danger; }
+
+		.card-header {
+			background: lighten($brand-danger, 35%);
+		}
+
+		.card-title {
+			color: $brand-danger;
+		}
 	}
 
 }
@@ -189,7 +229,7 @@ body {
 
 	dt {
 		text-transform: uppercase;
-		font-size     : .8em;
+		font-size     : 0.8em;
 		color         : inherit;
 	}
 
@@ -228,6 +268,12 @@ body {
 	}
 }
 
+.grid-sm-5 {
+	@media (min-width: $screen-sm) {
+		grid-template-columns: auto auto auto auto auto;
+	}
+}
+
 .grid-sm-4 {
 	@media (min-width: $screen-sm) {
 		grid-template-columns: auto auto auto auto;
@@ -252,6 +298,12 @@ body {
 	}
 }
 
+.grid-md-5 {
+	@media (min-width: $screen-md) {
+		grid-template-columns: auto auto auto auto auto;
+	}
+}
+
 .grid-md-4 {
 	@media (min-width: $screen-md) {
 		grid-template-columns: auto auto auto auto;
@@ -273,6 +325,12 @@ body {
 .grid-md-1 {
 	@media (min-width: $screen-md) {
 		grid-template-columns: auto;
+	}
+}
+
+.grid-lg-5 {
+	@media (min-width: $screen-lg) {
+		grid-template-columns: auto auto auto auto auto;
 	}
 }
 
