--- a/src/views/cards-example.html
+++ b/src/views/cards-example.html
@@ -139,7 +139,7 @@ fabricator: false
 	  <div class="card-header">
 	    <div class="card-title">Set for Christmas, 2017</div>
 	    <div class="card-header-actions">
-        <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">RSVPs: 7</button>
+        <button class="btn btn-primary dropdown-toggle" data-toggle="collapse" href=".rsvp-table">RSVPs <span class="badge">7</span></button>
 				<div class="btn-group">
 	        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	          <i class="glyphicon glyphicon glyphicon-option-vertical"></i></span>
@@ -181,6 +181,37 @@ fabricator: false
 				</dl>
 			</div>
 	  </div>
+		<div class="rsvp-table collapse">
+			<table class="table table-bordered table-responsive">
+				<thead>
+					<th>Pending <span class="badge">0</span></th>
+					<th>Updating <span class="badge">0</span></th>
+					<th>Confirmed <span class="badge">2</span></th>
+					<th>Denied <span class="badge">0</span></th>
+					<th>Cancelled <span class="badge">0</span></th>
+					<th>Wait List <span class="badge">0</span></th>
+					<th>Payment Declined <span class="badge">0</span></th>
+				</thead>
+				<tbody>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>
+							<div class="memberRes" draggable="true">
+								Staley, Mike (19896) (2)
+							</div>
+							<div class="memberRes" draggable="true">
+								Anderson, Tom (19896) (5)
+							</div>
+						</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	  <div class="card-footer">
 	    <div class="card-footer-actions">
 				<button class="btn btn-default">Edit</button>
