--- a/src/views/cards-example.html
+++ b/src/views/cards-example.html
@@ -7,6 +7,8 @@ fabricator: false
 
 	<h1>Card Examples</h1>
 
+	<p>These are some example uses for cards with the different data types that exist in the admin app today. You'll notice that each card uses a different combination of content elements—mostly combinations of raw paragraphs, data grids, and tables.</p>
+
 	<h2>Course Conditions</h2>
 	<hr>
 	<div class="card">
@@ -84,6 +86,7 @@ fabricator: false
 
 	<h2>Daily Specials</h2>
 	<hr>
+	<p>Daily specials have a title (housed in the card title), a message body (contained in a <code>&lt;blockquote&gt;</code>), and a data grid showing some meta elements.</p>
 	<div class="card">
 	  <div class="card-header">
 	    <div class="card-title">Yummy Stuff</div>
@@ -100,11 +103,13 @@ fabricator: false
 	    </div>
 	  </div>
 	  <div class="card-content">
-			<p><strong>Appetizer:</strong><br>Caramelized Onion, Chorizo, and White Bean Dip $11<br>Served chilled with grilled baguette</p>
-			<p><strong>Petite Entree:</strong><br>Seared Skate Fillet $19<br>Broccolini, balsamic roasted peppers and fresh lemon</p>
-			<p><strong>Entree</strong><br>Honey Glazed Boneless Pork Chop $23<br>Grilled and glazed pork chop, potato and corn hash, broccolini, and balsamic roasted peppers</p>
-			<p><strong>Seared Sea Scallops $31</strong><br>Marinated soba noodles, edamame cucumber salad, soy sauce, wasabi, and sriracha<br></p>
-			<p><strong>Chef's Daily Steak Feature:</strong><br>Grilled Tomahawk Steak $85<br>4oz Tomahawk steak served with choice of soup or salad, and two a la carte sides</p>
+			<blockquote>
+				<p><strong>Appetizer:</strong><br>Caramelized Onion, Chorizo, and White Bean Dip $11<br>Served chilled with grilled baguette</p>
+				<p><strong>Petite Entree:</strong><br>Seared Skate Fillet $19<br>Broccolini, balsamic roasted peppers and fresh lemon</p>
+				<p><strong>Entree</strong><br>Honey Glazed Boneless Pork Chop $23<br>Grilled and glazed pork chop, potato and corn hash, broccolini, and balsamic roasted peppers</p>
+				<p><strong>Seared Sea Scallops $31</strong><br>Marinated soba noodles, edamame cucumber salad, soy sauce, wasabi, and sriracha<br></p>
+				<p><strong>Chef's Daily Steak Feature:</strong><br>Grilled Tomahawk Steak $85<br>4oz Tomahawk steak served with choice of soup or salad, and two a la carte sides</p>
+			</blockquote>
 			<div class="data-grid grid-xs-1 grid-sm-2 grid-md-3 grid-lg-4">
 			  <dl>
 			  	<dt>Display Date</dt>
