--- a/src/views/cards-example.html
+++ b/src/views/cards-example.html
@@ -3,14 +3,19 @@ title: Card Examples
 fabricator: false
 ---
 
+<div class="jumbotron">
+	<div class="container container-fluid">
+		<h1>Card Examples</h1>
+		<p>These are some example uses for cards with the different data types that exist in the admin app today. You'll notice that each card uses a different combination of content elements—mostly combinations of raw paragraphs, data grids, and tables. Some cards, like the Event card, have advanced functionality and interactivity built into them.</p>
+		<p><a class="btn btn-primary btn-lg" href="structures.html#02-cards">Back to Toolkit</a></p>
+	</div>
+</div>
+
 <div class="container container-fluid">
-
-	<h1>Card Examples</h1>
-
-	<p>These are some example uses for cards with the different data types that exist in the admin app today. You'll notice that each card uses a different combination of content elements—mostly combinations of raw paragraphs, data grids, and tables.</p>
 
 	<h2>Course Conditions</h2>
 	<hr>
+	<p>Course conditions are perhaps the most straightforward card—they only contain a data grid of labels and values.</p>
 	<div class="card">
 	  <div class="card-header">
 	    <div class="card-title">Friday, June 16</div>
@@ -140,6 +145,9 @@ fabricator: false
 
 	<h2>Events</h2>
 	<hr>
+	<p>Events have an event title (housed in the card title), an event description (contained in a <code>&lt;blockquote&gt;</code>), and a data grid showing some meta elements.</p>
+	<p>Events also contain a collapsing table showing the various RSVP statuses of club members who have responded. The user can change club members' RSVP statuses by dragging and dropping between columns. <em class="text-muted">Planned: on small screens, the user can change club members' statuses by tapping on a member's name and selecting a new RSVP status via a dropdown menu.</em></p>
+	<p>If the Payments module is enabled, arrange the data grid with 4 columns at medium and large breakpoints (<code>.grid-md-4</code>, <code>.grid-lg-4</code>).</p>
 	<div class="card">
 	  <div class="card-header">
 	    <div class="card-title">Set for Christmas, 2017</div>
@@ -158,8 +166,10 @@ fabricator: false
 	    </div>
 	  </div>
 	  <div class="card-content">
+			<blockquote>
 				<p>Description for event. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta expedita alias obcaecati totam distinctio laboriosam, ut culpa quia aperiam aspernatur dolores quod iusto delectus natus tempora in, nulla, quisquam eveniet.</p>
-			<div class="data-grid grid-xs-1 grid-sm-2 grid-md-3 grid-lg-3">
+			</blockquote>
+			<div class="data-grid grid-xs-1 grid-sm-2 grid-md-4 grid-lg-4">
 				<dl>
 					<dt>Location</dt>
 					<dd>Staley Compound<br>101 Fan Court<br>Sewickley, Pennsylvania 15143</dd>
@@ -184,39 +194,45 @@ fabricator: false
 					<dt>Views</dt>
 					<dd>6 </dd>
 				</dl>
+				<dl>
+					<dt>Payments</dt>
+					<dd>$35.00</dd>
+				</dl>
+			</div>
+			<div class="rsvp-table collapse">
+				<h3>RSVPs</h3>
+				<p><small class="text-muted"><em>Drag club members between columns to change their RSVP status.</em></small></p>
+				<table class="table table-bordered table-responsive">
+					<thead>
+						<th>Pending <span class="badge">0</span></th>
+						<th>Updating <span class="badge">0</span></th>
+						<th>Confirmed <span class="badge">2</span></th>
+						<th>Denied <span class="badge">0</span></th>
+						<th>Cancelled <span class="badge">0</span></th>
+						<th>Wait List <span class="badge">0</span></th>
+						<th>Payment Declined <span class="badge">0</span></th>
+					</thead>
+					<tbody>
+						<tr>
+							<td></td>
+							<td></td>
+							<td>
+								<div class="memberRes" draggable="true">
+									Staley, Mike (19896) (2)
+								</div>
+								<div class="memberRes" draggable="true">
+									Anderson, Tom (19896) (5)
+								</div>
+							</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 	  </div>
-		<div class="rsvp-table collapse">
-			<table class="table table-bordered table-responsive">
-				<thead>
-					<th>Pending <span class="badge">0</span></th>
-					<th>Updating <span class="badge">0</span></th>
-					<th>Confirmed <span class="badge">2</span></th>
-					<th>Denied <span class="badge">0</span></th>
-					<th>Cancelled <span class="badge">0</span></th>
-					<th>Wait List <span class="badge">0</span></th>
-					<th>Payment Declined <span class="badge">0</span></th>
-				</thead>
-				<tbody>
-					<tr>
-						<td></td>
-						<td></td>
-						<td>
-							<div class="memberRes" draggable="true">
-								Staley, Mike (19896) (2)
-							</div>
-							<div class="memberRes" draggable="true">
-								Anderson, Tom (19896) (5)
-							</div>
-						</td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
 	  <div class="card-footer">
 	    <div class="card-footer-actions">
 				<button class="btn btn-default">Edit</button>
@@ -226,7 +242,63 @@ fabricator: false
 	  </div>
 	</div>
 
-
+	<h2>Messages</h2>
+	<hr>
+	<p>Messages have a title (housed in the card title), the message body (contained in a <code>&lt;blockquote&gt;</code>), and a data grid showing some meta elements.</p>
+	<p>If the Payments module is enabled, arrange the data grid with 3 columns at medium breakpoints (<code>.grid-md-3</code>) and 5 columns at large breakpoints (<code>.grid-lg-5</code>).</p>
+	<div class="card">
+		<div class="card-header">
+			<div class="card-title">Message Title</div>
+			<div class="card-header-actions">
+				<div class="btn-group">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="glyphicon glyphicon glyphicon-option-vertical"></i></span>
+					</a>
+					<ul class="dropdown-menu dropdown-menu-right">
+						<li><a href="#">Edit</a></li>
+						<li><a href="#">Copy</a></li>
+						<li><a href="#">Delete</a></li>
+						<li><a href="#">Send Reminder</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="card-content">
+			<blockquote>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita perspiciatis sed ad delectus fugit suscipit dolorum quis, quaerat possimus, dicta beatae sint eum saepe animi. Eligendi reiciendis aut fugit deserunt.</p>
+			</blockquote>
+			<div class="data-grid grid-xs-1 grid-sm-2 grid-md-3 grid-lg-5">
+				<dl>
+					<dt>Display Date</dt>
+					<dd>Saturday, June 17</dd>
+				</dl>
+				<dl>
+					<dt>Display Until</dt>
+					<dd>Monday, June 19</dd>
+				</dl>
+				<dl>
+					<dt>Posted By</dt>
+					<dd>Ellison, Ashleigh</dd>
+				</dl>
+				<dl>
+					<dt>Views</dt>
+					<dd>6</dd>
+				</dl>
+				<dl>
+					<dt>Payments</dt>
+					<dd>$30.00</dd>
+				</dl>
+			</div>
+		</div>
+		<div class="card-footer">
+	    <div class="card-footer-actions">
+				<button class="btn btn-default">Edit</button>
+				<button class="btn btn-default">Copy</button>
+	      <button class="btn btn-default">Delete</button>
+				<button class="btn btn-default">Send Reminder</button>
+	    </div>
+	  </div>
+	</div>
 
 
 
