--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -1,5 +1,6 @@
 // Import fonts from Google CDN
 @import url( 'https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Roboto:400,400i,700,700i');
+@import url( 'https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 // Overwrite Bootstrap defaults
 $brand-primary: #219633;
@@ -87,9 +88,9 @@ body {
 				padding-left  : 7px;
 				padding-bottom: 7px;
 				text-transform: uppercase;
-				letter-spacing: 0.025em;
-				opacity       : 0.8;
-				font-size     : 0.8em;
+				letter-spacing: .025em;
+				opacity       : .8;
+				font-size     : .8em;
 			}
 		}
 
@@ -109,6 +110,45 @@ body {
 		.navbar-collapse .navbar-nav.navbar-right:last-child {
 			margin-right: 0;
 		}
+	}
+}
+
+.navbar-alert {
+	background: $brand-primary;
+	color     : $white;
+	text-align: center;
+	font-size : .8em;
+	padding   : .5em 5%;
+
+	a {
+		color          : $white;
+		font-weight    : bold;
+		text-decoration: underline;
+	}
+
+	&.navbar-alert-muted {
+		background: $gray-lighter;
+		color     : $gray-light;
+
+		a {
+			color: $gray-light;
+		}
+	}
+
+	&.navbar-alert-success {
+		background: $brand-success;
+	}
+
+	&.navbar-alert-info {
+		background: $brand-info;
+	}
+
+	&.navbar-alert-warning {
+		background: $brand-warning;
+	}
+
+	&.navbar-alert-danger {
+		background: $brand-danger;
 	}
 }
 
@@ -155,7 +195,7 @@ body {
 
 	// Status cards
 	&.card-muted {
-		opacity: 0.5;
+		opacity: .5;
 	}
 
 	&.card-danger,
@@ -234,7 +274,7 @@ body {
 
 	dt {
 		text-transform: uppercase;
-		font-size     : 0.8em;
+		font-size     : .8em;
 		color         : inherit;
 	}
 
